--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'GlyfariumDef';
+    src: url('../public/assets/font_def.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* 
   TODO: Add your font files to public/assets/fonts/
   and update the @font-face rule below.
