--- a/src/input.css
+++ b/src/input.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'GlyfariumDef';
-    src: url('/assets/font_def.otf');
+    src: url('font_def.otf');
     font-weight: normal;
     font-style: normal;
 }
